# MyProject

./: .gitignore  AGENTS.md
ai-agent/: .env.example  pyproject.toml
ai-agent/scripts/: run_ablation.py
ai-agent/src/ai_agent/: __init__.py  main.py
ai-agent/src/ai_agent/consumer/: __init__.py  models.py
ai-agent/src/ai_agent/llm/: __init__.py  client.py  models.py  prompts.py
ai-agent/src/ai_agent/metrics/: __init__.py  collector.py
ai-agent/src/ai_agent/rag/: __init__.py  knowledge.py  models.py  retriever.py
ai-agent/src/ai_agent/sanitizer/: __init__.py  models.py  sanitizer.py
ai-agent/src/ai_agent/scripts/: __init__.py  generate_alerts.py
ai-agent/src/ai_agent/verifier/: __init__.py  models.py  verifier.py
ai-agent/tests/: test_rag.py  test_sanitizer.py  test_verifier.py
datasets/: .gitkeep
deployments/: docker-compose.yml
go-telemetry/: go.mod
go-telemetry/cmd/telemetry/: main.go
go-telemetry/internal/aggregator/: aggregator.go
go-telemetry/internal/capture/: pcap.go  reader.go
go-telemetry/internal/features/: extractor.go
go-telemetry/internal/producer/: producer.go
go-telemetry/pkg/contract/: alert.go  bundle.go
