[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent for Smart Grid Alert Triage - Evidence-Grounded LLM Pipeline"
requires-python = ">=3.12"
dependencies = [
    # NATS 客户端：从 Go 端消费告警快照
    "nats-py>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

# 开发依赖（后续 Sprint 会逐步加：openai/anthropic, chromadb, pydantic 等）
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
